src/objects/Submit_Team_for_Approval__e.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Id__c</fullName>
        <label>Submitter Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Approval Event</label>
    <pluralLabel>Opportunity Approval Event</pluralLabel>
</CustomObject>